crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_min_max.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 1,
  "r2": 5,
  "r3": "Barn Owl",
  "r4": "Pigeon"
}
