crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_partition.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    4,
    5
  ],
  "r1": [
    [
      2,
      4
    ],
    [
      1,
      3,
      5
    ]
  ],
  "r2": [
    [
      1,
      3,
      5
    ],
    [
      2,
      4
    ]
  ],
  "r3": [
    [
      1,
      2,
      3,
      4,
      5
    ],
    []
  ],
  "r4": [
    [],
    [
      1,
      2,
      3,
      4,
      5
    ]
  ]
}
