crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_repeat.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [],
  "r2": [
    1,
    2,
    3
  ],
  "r3": [
    1,
    2,
    3,
    1,
    2,
    3,
    1,
    2,
    3
  ],
  "r4": []
}
