crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_split.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3
  ],
  "r1": [
    [],
    [
      1,
      2,
      3
    ]
  ],
  "r2": [
    [
      1
    ],
    [
      2,
      3
    ]
  ],
  "r3": [
    [
      1,
      2
    ],
    [
      3
    ]
  ],
  "r4": [
    [
      1,
      2,
      3
    ],
    []
  ],
  "r5": [
    [],
    []
  ]
}
