crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_to_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3
  ],
  "r1": {
    "1": 2,
    "2": 4,
    "3": 6
  }
}
