crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_to_map_comprehensive.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 4437
expression: eval_pkl(source)
---
{
  "result": {
    "a": 1,
    "b": 2,
    "c": 3
  }
}
