crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_list_zip.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    [
      1,
      4
    ],
    [
      2,
      5
    ],
    [
      3,
      6
    ]
  ],
  "r2": [
    [
      1,
      4
    ],
    [
      2,
      5
    ],
    [
      3,
      6
    ]
  ],
  "r3": []
}
